0.9.8 - in development 
---------------------- 

 * qview: new command to view content of any arbitrary file from disk

0.9.8 - 2009-02-13
------------------

This release is a minor regression fixing release, to be released in sync with
bzr 1.12 finial.

 * Fix bug where qinit was not working - correclty handle QString arguments
   when starting a subprocess (Bug #327395)


0.9.7 - 2009-02-09
----------------------
 * qcommit:
    * handle situation with huge list of committed files on Windows
      (Bug #277077).
    * properly show changed files when only executable bit changed.
    * fixed a bug, where if there is a lock on a branch, you could not close
      the window.
 * qconflicts: new command and new window to view and resolve conflicts.
 * qlog:
    * removed the delay when loading revision form local repositories.
    * when the search is, scroll so that the selected revision is kepted in
      view.
 * qdiff:
    * Don't use replace when decoding texts, fall back to latin1 instead.
      (Bug #323543 - side-by-side shows wrong changes highlighting for files
      with non-ascii characters)
 * qrevert:
    * added --no-backup option. 
 * Add the ability to configure, and use external diff tools from QBzr.
   If the user has bzr-difftools - the usability of this funcaility is
   improved.
 * Properly stop running action with Cancel button on Windows.
 * Transport activity is displayed next to the throbbers/progress bars.
 * Password prompts are now displaied in qlog, qbrowse, qcat, qdiff, qannotate.


0.9.6 - 2009-01-10
----------------------
New features in this release: throbber, interactive password prompt,
post_uncommit hook, new bug-url command. Dozen of bugs fixed as well.

 * Add post_uncommit hook to remember the uncomitted commit message.
 * Add interactive prompt for password if access to the branch require it.
 * Add throbber feature: user will see message "Loading..." and animation